--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "todos",
   "version": "0.1.0",
+  "homepage": "https://yourusername.gitlab.io/assessment---todo-app-part-1",
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
